ダッシュ ホログラム

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -27,6 +27,9 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/NavigationSystem.RecastNavMesh]
 RuntimeGeneration=Dynamic
 
+[/Script/Engine.RendererSettings]
+r.CustomDepth=3
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
