サンプルマップ削除 Inputを設定

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -73,7 +73,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="ChangeCameraMode",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=X)
 +ActionMappings=(ActionName="ChangeCameraMode",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftShoulder)
 +ActionMappings=(ActionName="ChangeCarMode",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
-+ActionMappings=(ActionName="ChangeCarMode",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightTrigger)
++ActionMappings=(ActionName="ChangeCarMode",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Left)
 +ActionMappings=(ActionName="Shake",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=H)
 +ActionMappings=(ActionName="Shake",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Right)
 +ActionMappings=(ActionName="GoFlat",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
@@ -86,10 +86,10 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="DontConnect",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Top)
 +ActionMappings=(ActionName="MiniMapZoom",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Z)
 +ActionMappings=(ActionName="ViewMiniMap",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=V)
++ActionMappings=(ActionName="ViewMiniMap",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Top)
++ActionMappings=(ActionName="ChangeCameraMode",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightShoulder)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
-+AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
-+AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=Down)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Gamepad_LeftY)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
@@ -102,13 +102,17 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=MotionController_Left_Thumbstick_Y)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=MotionController_Left_Thumbstick_X)
-+AxisMappings=(AxisName="TurnRate",Scale=-1.000000,Key=MotionController_Right_Thumbstick_X)
++AxisMappings=(AxisName="MiniMapTurn",Scale=1.000000,Key=Gamepad_RightX)
 +AxisMappings=(AxisName="MiniMapTurn",Scale=-1.000000,Key=Left)
-+AxisMappings=(AxisName="MiniMapTurn",Scale=1.000000,Key=Right)
 +AxisMappings=(AxisName="MiniMapMoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MiniMapMoveRight",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="MiniMapMoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MiniMapMoveRight",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="LookUpRate",Scale=-1.000000,Key=Up)
++AxisMappings=(AxisName="LookUpRate",Scale=1.000000,Key=Down)
++AxisMappings=(AxisName="MiniMapTurn",Scale=1.000000,Key=Right)
++AxisMappings=(AxisName="MiniMapMoveForward",Scale=1.000000,Key=Gamepad_LeftY)
++AxisMappings=(AxisName="MiniMapMoveRight",Scale=1.000000,Key=Gamepad_LeftX)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
