--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=CO2
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/_Users/Maps/TestMap.TestMap
-GameDefaultMap=/Game/_Users/Maps/TestMap.TestMap
+EditorStartupMap=/Game/_Users/Maps/Map1_2.Map1_2
+GameDefaultMap=/Game/_Users/Maps/Map1_2.Map1_2
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
@@ -76,5 +76,3 @@ InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
-
-
