--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -88,6 +88,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="ViewMiniMap",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=V)
 +ActionMappings=(ActionName="ViewMiniMap",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Top)
 +ActionMappings=(ActionName="ChangeCameraMode",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightShoulder)
++ActionMappings=(ActionName="Marking",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="Marking",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Gamepad_LeftY)
