--- a/.gitignore
+++ b/.gitignore
@@ -977,3 +977,9 @@ Saved
 /Content/ModSci_Engineer/Textures/Wires/T_Wire_Rough.uasset
 /Content/BallisticsVFX/DemoMap/BallisticsVFX_DemoMap_BuiltData.uasset
 /Content/StarterBundle/CollectionMaps/Map1_BuiltData.uasset
+/Content/StarterContent/Maps/Advanced_Lighting.umap
+/Content/StarterContent/Maps/Advanced_Lighting_BuiltData.uasset
+/Content/StarterContent/Maps/Minimal_Default.umap
+/Content/StarterContent/Maps/Minimal_Default_BuiltData.uasset
+/Content/StarterContent/Maps/StarterMap.umap
+/Content/StarterContent/Maps/StarterMap_BuiltData.uasset
